# SimpleExpressionParser

./: AST.cpp  AST.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  Parser.cpp  Parser.hpp  README.md  calc  calc2PostfixMain.cpp  calc2SexprMain.cpp  calc2postfix  calc2sexpr  calcMain.cpp  cmake_install.cmake  eval.md  main.cpp  test.py  testCalc.py  testCalcOutput  testFile  testOutput  testPostfix.py  testPostfixOutput  testSexpr.py  testSexprOutput
